2007-09-21	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: Fix warning on Diab compiler.

2007-09-19	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: Fix Reenable command and fix typo.

2007-09-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/1553/b1553brm.c, shared/can/grcan.c: Remove include of sched.h

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/spw/grspw.c: Remove include of sched.h. It does not appear to
	be needed and is unavailable when POSIX is disabled.

2007-09-12	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/grcan.c, shared/include/debug_defs.h, shared/spw/grspw.c:
	Remove use of DEBUG_printf.

2007-09-07	Daniel Hellstrom <daniel@gaisler.com>

	* shared/1553/b1553brm.c, shared/can/grcan.c, shared/can/grcan_rasta.c,
	shared/can/occan.c, shared/spw/grspw.c, shared/spw/grspw_pci.c,
	shared/uart/apbuart.c: Remove warnings.

2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	* shared/pci/pcifinddevice.c: New file.

2007-09-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/uart/apbuart.c: Fix some warnings.

2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	New drivers: PCI, b1553BRM, SpaceWire(GRSPW), CAN (GRCAN,OC_CAN),
	Raw UART.
	* shared/1553/b1553brm.c, shared/1553/b1553brm_pci.c,
	shared/1553/b1553brm_rasta.c, shared/can/grcan.c,
	shared/can/grcan_rasta.c, shared/can/occan.c, shared/can/occan_pci.c,
	shared/spw/grspw.c, shared/spw/grspw_pci.c, shared/spw/grspw_rasta.c,
	shared/uart/apbuart.c, shared/uart/apbuart_pci.c,
	shared/uart/apbuart_rasta.c: New files missed in previous commit.

2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	* Makefile.am: Add the following new drivers: PCI, b1553BRM,
	SpaceWire(GRSPW), CAN (GRCAN,OC_CAN), Raw UART.
	* shared/include/apbuart.h, shared/include/apbuart_pci.h,
	shared/include/apbuart_rasta.h, shared/include/b1553brm.h,
	shared/include/b1553brm_pci.h, shared/include/b1553brm_rasta.h,
	shared/include/debug_defs.h, shared/include/grcan.h,